--- a/nifi-nar-bundles/nifi-framework-bundle/nifi-framework/nifi-web/nifi-web-ui/pom.xml
+++ b/nifi-nar-bundles/nifi-framework-bundle/nifi-framework/nifi-web/nifi-web-ui/pom.xml
@@ -565,6 +565,7 @@
                                                 <include>${staging.dir}/js/nf/nf-ng-app-controller.js</include>
                                                 <include>${staging.dir}/js/nf/nf-ng-app-config.js</include>
                                                 <include>${staging.dir}/js/nf/canvas/nf-canvas-bootstrap.js</include>
+                                                <include>${staging.dir}/js/nf/canvas/nf-recs-and-policies-drawer.js</include>
                                             </includes>
                                         </aggregation>
                                         <aggregation>
@@ -769,6 +770,7 @@
                                                 <include>${staging.dir}/css/settings.css</include>
                                                 <include>${staging.dir}/css/about.css</include>
                                                 <include>${staging.dir}/css/status-history.css</include>
+                                                <include>${staging.dir}/css/recs-and-policies-drawer.css</include>
                                             </includes>
                                         </aggregation>
                                         <aggregation>
@@ -808,6 +810,7 @@
                                                 <include>${staging.dir}/css/processor-details.css</include>
                                                 <include>${staging.dir}/css/connection-details.css</include>
                                                 <include>${staging.dir}/css/status-history.css</include>
+                                                <include>${staging.dir}/css/recs-and-policies-drawer.css</include>
                                                 <include>${staging.dir}/css/summary.css</include>
                                             </includes>
                                         </aggregation>
