NIFI-11520: Add a menu to display Flow Analysis report results (#8273)
* NIFI-11520: init ui work for flow analysis UI

* NIFI-11520: use .text() to render user input data

* NIFI-11520: update urls for analysis requests

* NIFI-11520: add WARN enforcement level to ui

* NIFI-11520: ui bug fixes

* fix rule bindings
* use correct count for rule violations

* NIFI-11520: move drawer markup into partial file

* NIFI-11520: remove old recs and policies naming

* NIFI-11520: comments and code cleanup

* NIFI-11520: fix linting errors

* NIFI-11520: restore refresh button logic

* NIFI-11520: remove timer

* NIFI-11520: add checkbox to only show warning violations

* NIFI-11520: style and copy changes

* change copy of violation checkboxes
* show correct details in violation dialog
* add overflow to violations menu

* NIFI-11520: add missing license header

* NIFI-11520: remove unused function

* NIFI-11520: cleanup rule and violation menu handling

* NIFI-11520: remove single use functions

* NIFI-11520: change function name to match established pattern

* NIFI-11520: rename function

* NIFI-11520: remove rule and violation details menu

* NIFI-11520: fix issue causing wrong documentation to be displayed

* NIFI-11520: fix go to button for components in nested process groups

* NIFI-11520: use refresh interval returned from the backend

* NIFI-11520: reload analysis when canvas is refreshed

* NIFI-11520: add violation details dialog with correct message

* NIFI-11520: disabled go to component when root group is violation

* NIFI-11520: remove unused CSS styles

* NIFI-11520: addressing more feedback:

* fix flow analysis drawer button styling
* disable edit rule if user does not have read permission
* fix broken warning list
* add loader and disable check now button while report is running

* NIFI-11520: handle violations without read permission

* NIFI-11520: disable go to component if not processor

* NIFI-11520: remove create analysis button and logic

* NIFI-11520:

--- a/nifi-nar-bundles/nifi-framework-bundle/nifi-framework/nifi-web/nifi-web-ui/src/main/resources/filters/summary.properties
+++ b/nifi-nar-bundles/nifi-framework-bundle/nifi-framework/nifi-web/nifi-web-ui/src/main/resources/filters/summary.properties
@@ -43,4 +43,5 @@ nf.summary.style.tags=<link rel="stylesheet" href="css/main.css?${project.versio
 <link rel="stylesheet" href="css/connection-details.css?${project.version}" type="text/css" />\n\
 <link rel="stylesheet" href="css/message-pane.css?${project.version}" type="text/css" />\n\
 <link rel="stylesheet" href="css/status-history.css?${project.version}" type="text/css" />\n\
+<link rel="stylesheet" href="css/flow-analysis-drawer.css?${project.version}" type="text/css" />\n\
 <link rel="stylesheet" href="css/summary.css?${project.version}" type="text/css" />
