NIFI-14319: init new registry app

--- a/nifi-frontend/src/main/frontend/nx.json
+++ b/nifi-frontend/src/main/frontend/nx.json
@@ -33,6 +33,11 @@
             "cache": true,
             "dependsOn": ["^build"],
             "inputs": ["production", "^production"]
+        },
+        "@angular-devkit/build-angular:application": {
+            "cache": true,
+            "dependsOn": ["^build"],
+            "inputs": ["production", "^production"]
         }
     },
     "defaultBase": "dev",
@@ -66,6 +71,7 @@
     ],
     "generators": {
         "@nx/angular:application": {
+            "e2eTestRunner": "none",
             "linter": "eslint",
             "style": "scss",
             "unitTestRunner": "jest"
